Update custom config in test to remove deprecated param